fix : empty white space in search box

--- a/src/component/CardPhoto/CardPhoto.scss
+++ b/src/component/CardPhoto/CardPhoto.scss
@@ -5,6 +5,9 @@
   img{
     opacity: 0.99;
     border-radius: 0.5rem;
+    background: #232a34;
+    width: 100%;
+    height: 100%;
   }
   &:hover{
     transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
